force/src/objects/MPM4_BASE__Milestone1_Milestone__c.object
<CustomObject>
    <description>Passage Technology - Milestones PM+ Free Edition - Milestones are significant events in the life-cycle of a Project. You can also use them to track project phases. Milestones can have tasks and sub-milestones associated with them.</description>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Duration_Calc__c</fullName>
        <formula>IF ( ISBLANK(MPM4_BASE__Actual_Finish_Date__c),   MPM4_BASE__Deadline__c  - IF(ISBLANK( MPM4_BASE__Actual_Start_Date__c),   MPM4_BASE__Kickoff__c ,  MPM4_BASE__Actual_Start_Date__c ) + 1, MPM4_BASE__Actual_Finish_Date__c  - IF(ISBLANK( MPM4_BASE__Actual_Start_Date__c),   MPM4_BASE__Kickoff__c ,  MPM4_BASE__Actual_Start_Date__c )+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Duration__c</fullName>
        <label>zDeprecated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Expense_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from expense records related to tasks on child milestones</inlineHelpText>
        <label>Actual Expense From Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Expense_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from expense records related to tasks on this milestone</inlineHelpText>
        <label>Actual Expense From Tasks</label>
        <summarizedField>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Total_Expense__c</summarizedField>
        <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Finish_Date__c</fullName>
        <inlineHelpText>When did work actually finish?</inlineHelpText>
        <label>Actual Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Hours_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from time records related to tasks on child milestones</inlineHelpText>
        <label>Actual Hours From Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Hours_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from time records related to tasks on this milestone</inlineHelpText>
        <label>Actual Hours From Tasks</label>
        <summarizedField>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Total_Hours__c</summarizedField>
        <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Start_Date__c</fullName>
        <inlineHelpText>When did work actually start?</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Alias__c</fullName>
        <description>This is the alias for a milestone.</description>
        <inlineHelpText>An alias helps you associate a task to a milestone using the single line entry home page component.</inlineHelpText>
        <label>Milestone Alias</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Blocked_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many tasks are blocked in sub-milestones?</inlineHelpText>
        <label>Blocked Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Blocked_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>How many tasks are flagged as blocked?</inlineHelpText>
        <label>Blocked Tasks (in Tasks)</label>
        <summaryFilterItems>
            <field>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Blocked__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Complete_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of complete tasks related to sub-milestones</inlineHelpText>
        <label>Complete Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Complete_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>Number of complete tasks related to this milestone</inlineHelpText>
        <label>Complete Tasks (in Tasks)</label>
        <summaryFilterItems>
            <field>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This signifies that this milestone has been completed.</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Deadline__c</fullName>
        <inlineHelpText>The date that this deadline needs to be finished by.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Description__c</fullName>
        <inlineHelpText>A general description of the milestone.</inlineHelpText>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Duration__c</fullName>
        <formula>(MPM4_BASE__Deadline__c -  MPM4_BASE__Kickoff__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Estimated_Expense_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from tasks on child milestones</inlineHelpText>
        <label>Estimated Expense From Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Estimated_Expense_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from tasks on this milestone</inlineHelpText>
        <label>Estimated Expense From Tasks</label>
        <summarizedField>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Estimated_Expense__c</summarizedField>
        <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Estimated_Hours_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from tasks on child milestones</inlineHelpText>
        <label>Estimated Hours From Sub-Milestones</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Estimated_Hours_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from tasks on this milestone</inlineHelpText>
        <label>Estimated Hours From Tasks</label>
        <summarizedField>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Estimated_Hours__c</summarizedField>
        <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Exclude_Weekend_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Weekend Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Expense_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The expense budget for the milestone.</inlineHelpText>
        <label>Milestone Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Expense_Budget_from_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The expense budget all the sub milestones of this milestone.</inlineHelpText>
        <label>Expense Budget from Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Gantt_Color__c</fullName>
        <label>Gantt Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Hours_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The hours budget for the milestone.</inlineHelpText>
        <label>Milestone Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Hours_Budget_from_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total hours budget for all the sub milestones for this milestone.</inlineHelpText>
        <label>Hours Budget from Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__ImportID__c</fullName>
        <inlineHelpText>An Import ID used during the XML export/import process only.</inlineHelpText>
        <label>Import ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Kickoff__c</fullName>
        <inlineHelpText>When should this milestone kickoff?</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Late_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of incomplete and overdue tasks related to child milestones</inlineHelpText>
        <label>Late Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Late_Tasks_in_Tasks_2__c</fullName>
        <inlineHelpText>How many tasks are late?</inlineHelpText>
        <label>Late Tasks (in Tasks)2</label>
        <summaryFilterItems>
            <field>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Complete__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Days_Late__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Late_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>Number of incomplete and overdue tasks related to this milestone</inlineHelpText>
        <label>Late Tasks (in Tasks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Milestone_Unique_Number__c</fullName>
        <inlineHelpText>Do not update this field value. Milestones PM+ will update this automatically.</inlineHelpText>
        <label>Milestone Unique Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MPM4_BASE__NameClean__c</fullName>
        <description>Formula designed to keep a Gantt safe chart name.  Note: this field may be discontinued.</description>
        <formula>SUBSTITUTE(Name, &apos;&quot;&apos;, &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameClean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Notification_Email_Address__c</fullName>
        <label>Notification Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Okay_to_Reparent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A hidden field used to prevent users from manually moving Milestones to different Projects</description>
        <label>Okay to Reparent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Open_Late_Blocked_Tasks__c</fullName>
        <formula>IF( max( MPM4_BASE__Total_Open_Tasks__c, MPM4_BASE__Total_Late_Tasks__c, MPM4_BASE__Total_Blocked_Tasks__c) &gt; 0,
IMAGE(&quot;http://chart.apis.google.com/chart?chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max( MPM4_BASE__Total_Open_Tasks__c, MPM4_BASE__Total_Late_Tasks__c, MPM4_BASE__Total_Blocked_Tasks__c)) &amp; &quot;&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb,ee3322&amp;chdl=&quot;&amp;
&quot;Open (&quot; &amp; TEXT(MPM4_BASE__Total_Open_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;|Late (&quot; &amp; TEXT(MPM4_BASE__Total_Late_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;|Blocked (&quot; &amp; TEXT(MPM4_BASE__Total_Blocked_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp; TEXT(MPM4_BASE__Total_Open_Tasks__c/ max(MPM4_BASE__Total_Open_Tasks__c, MPM4_BASE__Total_Blocked_Tasks__c, MPM4_BASE__Total_Late_Tasks__c) * 100)&amp;&quot;|&quot;&amp; TEXT(MPM4_BASE__Total_Late_Tasks__c / max(MPM4_BASE__Total_Open_Tasks__c, MPM4_BASE__Total_Blocked_Tasks__c, MPM4_BASE__Total_Late_Tasks__c) * 100) &amp;&quot;|&quot; &amp; TEXT(MPM4_BASE__Total_Blocked_Tasks__c/ max(MPM4_BASE__Total_Open_Tasks__c, MPM4_BASE__Total_Blocked_Tasks__c, MPM4_BASE__Total_Late_Tasks__c) * 100) , &quot;Project Status, Open Tasks, Late Tasks &amp; Blocked Tasks&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks  - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Open_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of incomplete tasks related to child milestones</inlineHelpText>
        <label>Open Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Open_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>Number of incomplete tasks related to this milestone</inlineHelpText>
        <label>Open Tasks (in Tasks)</label>
        <summaryFilterItems>
            <field>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Complete__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Open_vs_Complete_Tasks__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:&quot;&amp;Text( MPM4_BASE__Total_Open_Tasks__c )&amp;&quot;,&quot;&amp;Text(MPM4_BASE__Total_Complete_Tasks__c)&amp;&quot;&amp;chdl=&quot;&amp;
&quot;Open%20Tasks (&quot; &amp; TEXT(MPM4_BASE__Total_Open_Tasks__c) &amp;&quot;)&quot;&amp;
&quot;|Complete%20Tasks (&quot; &amp; TEXT(MPM4_BASE__Total_Complete_Tasks__c) &amp;&quot;)&quot;
,&quot;Open vs. Complete Tasks&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Parent_Milestone_Import_Id__c</fullName>
        <label>Parent Milestone Import Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Parent_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent milestone for this milestone if applicable.</inlineHelpText>
        <label>Parent Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MPM4_BASE__Milestone1_Milestone__c.MPM4_BASE__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.MPM4_BASE__Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>MPM4_BASE__Milestone1_Milestone__c.MPM4_BASE__Parent_Milestone__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <infoMessage>Parent Milestones must be part of the same project as the child milestone.  Also, Parent Milestone cannot also be a Child Milestone.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MPM4_BASE__Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Child Milestones</relationshipLabel>
        <relationshipName>Child_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Predecessor_Milestone_Import_Id__c</fullName>
        <label>Predecessor_Milestone_Import_Id__c</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Predecessor_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The milestone which must be complete before you start this one. The Predecessor Milestone end date must be before the current Milestone start date.</inlineHelpText>
        <label>Predecessor Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MPM4_BASE__Milestone1_Milestone__c.MPM4_BASE__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.MPM4_BASE__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MPM4_BASE__Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Successor Milestones</relationshipLabel>
        <relationshipName>Successor_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Creation_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Creation Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Deadline__c</fullName>
        <formula>MPM4_BASE__Project__r.MPM4_BASE__Deadline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Kickoff_Offset__c</fullName>
        <formula>NULLVALUE(MPM4_BASE__Kickoff__c -  MPM4_BASE__Project__r.MPM4_BASE__Kickoff__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many days after project kickoff does this milestone kickoff?</inlineHelpText>
        <label>Project Kickoff Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Kickoff__c</fullName>
        <formula>MPM4_BASE__Project__r.MPM4_BASE__Kickoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Owner_Email__c</fullName>
        <label>Project Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The project this milestone is assigned to. If this is a sub-milestone this field is empty.</inlineHelpText>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Remote_Object_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Object Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Task_Sync_Id__c</fullName>
        <label>Task Sync Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Actual_Expense__c</fullName>
        <formula>MPM4_BASE__Actual_Expense_From_Tasks__c + MPM4_BASE__Actual_Expense_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from expense records on tasks for this milestone and all child milestones</inlineHelpText>
        <label>Total Actual Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Actual_Hours__c</fullName>
        <formula>MPM4_BASE__Actual_Hours_From_Tasks__c + MPM4_BASE__Actual_Hours_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from time records on tasks for this milestone and all child milestones</inlineHelpText>
        <label>Total Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Blocked_Tasks__c</fullName>
        <formula>MPM4_BASE__Blocked_Tasks_in_Tasks__c +  MPM4_BASE__Blocked_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many tasks are flagged as blocked?</inlineHelpText>
        <label>Total Blocked Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Complete_Tasks__c</fullName>
        <formula>MPM4_BASE__Complete_Tasks_in_Tasks__c  +  MPM4_BASE__Complete_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Complete Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Estimated_Expense__c</fullName>
        <formula>MPM4_BASE__Estimated_Expense_From_Tasks__c + MPM4_BASE__Estimated_Expense_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from task records for this milestone and all child milestones</inlineHelpText>
        <label>Total Estimated Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Estimated_Hours__c</fullName>
        <formula>MPM4_BASE__Estimated_Hours_From_Tasks__c + MPM4_BASE__Estimated_Hours_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from task records for this milestone and all child milestones</inlineHelpText>
        <label>Total Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Expense_Balance__c</fullName>
        <formula>MPM4_BASE__Total_Estimated_Expense__c - MPM4_BASE__Total_Actual_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as total estimated expense - total actual expense</inlineHelpText>
        <label>Total Expense Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Expense_Budget__c</fullName>
        <formula>MPM4_BASE__Expense_Budget__c +  MPM4_BASE__Expense_Budget_from_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as expense budget + expense budget from sub milestones</inlineHelpText>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Hours_Balance__c</fullName>
        <formula>MPM4_BASE__Total_Estimated_Hours__c - MPM4_BASE__Total_Actual_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as total estimated hours - total actual hours</inlineHelpText>
        <label>Total Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Hours_Budget__c</fullName>
        <formula>MPM4_BASE__Hours_Budget__c + MPM4_BASE__Hours_Budget_from_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as hours budget + hours budget from sub milestones</inlineHelpText>
        <label>Total Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Late_Tasks__c</fullName>
        <formula>MPM4_BASE__Late_Tasks_in_Tasks_2__c + MPM4_BASE__Late_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of incomplete and overdue tasks related to this milestone and its child milestones</inlineHelpText>
        <label>Total Late Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Open_Tasks__c</fullName>
        <formula>MPM4_BASE__Open_Tasks_in_Tasks__c + MPM4_BASE__Open_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of incomplete tasks related to this milestone and its child milestones</inlineHelpText>
        <label>Total Open Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Weekday_Duration__c</fullName>
        <label>Weekday Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__hide_delete_checkbox_on_mpp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Delete Checkbox on MPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>MPM4_BASE__All</fullName>
        <columns>NAME</columns>
        <columns>MPM4_BASE__Parent_Milestone__c</columns>
        <columns>MPM4_BASE__Project__c</columns>
        <columns>MPM4_BASE__Deadline__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MPM4_BASE__My_Milestones</fullName>
        <columns>MPM4_BASE__Project__c</columns>
        <columns>NAME</columns>
        <columns>MPM4_BASE__Deadline__c</columns>
        <columns>MPM4_BASE__Total_Open_Tasks__c</columns>
        <columns>MPM4_BASE__Total_Late_Tasks__c</columns>
        <columns>MPM4_BASE__Total_Blocked_Tasks__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>MPM4_BASE__Parent_Milestone__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Milestones</label>
    </listViews>
    <nameField>
        <label>Project Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>MPM4_BASE__Resource_Assignment__c</fullName>
        <label>Resource Assignment</label>
    </sharingReasons>
    <validationRules>
        <fullName>MPM4_BASE__Alias_must_not_contain_spaces</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(TRIM(MPM4_BASE__Alias__c ),&quot; &quot;)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Alias__c</errorDisplayField>
        <errorMessage>The Milestone Alias cannot contain spaces.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__CanNotAddSubmilestoneToParentCompleted</fullName>
        <active>true</active>
        <errorConditionFormula>AND(MPM4_BASE__Parent_Milestone__r.MPM4_BASE__Complete__c, ISCHANGED(MPM4_BASE__Parent_Milestone__c))</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Parent_Milestone__c</errorDisplayField>
        <errorMessage>You can not add milestones to parent milestones with status completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__CannotBeCompleteWithOpenTasks</fullName>
        <active>false</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Complete__c</errorDisplayField>
        <errorMessage>You cannot mark a milestone as complete if it has open tasks.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Deadline_within_project_boundaries</fullName>
        <active>false</active>
        <errorConditionFormula>if ( and (MPM4_BASE__Deadline__c &lt;&gt; null, MPM4_BASE__Project__r.MPM4_BASE__Deadline__c &lt;&gt;  null, MPM4_BASE__Deadline__c &gt; MPM4_BASE__Project__r.MPM4_BASE__Deadline__c) , true, false)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Deadline__c</errorDisplayField>
        <errorMessage>Deadline must be less than or equal to the project deadline.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__KickoffDeadlineWithinParentBoundaries</fullName>
        <active>false</active>
        <errorConditionFormula>(NOT(ISNULL(MPM4_BASE__Kickoff__c)) &amp;&amp; NOT(ISNULL(MPM4_BASE__Parent_Milestone__r.MPM4_BASE__Kickoff__c)) &amp;&amp; MPM4_BASE__Kickoff__c &lt; MPM4_BASE__Parent_Milestone__r.MPM4_BASE__Kickoff__c) || (NOT(ISNULL(MPM4_BASE__Deadline__c)) &amp;&amp; NOT(ISNULL(MPM4_BASE__Parent_Milestone__r.MPM4_BASE__Deadline__c)) &amp;&amp; MPM4_BASE__Deadline__c &gt; MPM4_BASE__Parent_Milestone__r.MPM4_BASE__Deadline__c)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Kickoff__c</errorDisplayField>
        <errorMessage>Milestone Kickoff must not be earlier than Parent Kickoff and Milestone Deadline must not be later than Parent Deadline.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Kickoff_after_Predecessor_Deadline</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNULL(MPM4_BASE__Kickoff__c)) &amp;&amp; NOT(ISNULL(MPM4_BASE__Predecessor_Milestone__r.MPM4_BASE__Deadline__c)) &amp;&amp; MPM4_BASE__Kickoff__c &lt; MPM4_BASE__Predecessor_Milestone__r.MPM4_BASE__Deadline__c</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Kickoff__c</errorDisplayField>
        <errorMessage>Milestone Kickoff must not be earlier than its Predecessor&apos;s Deadline.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Kickoff_before_deadline</fullName>
        <active>false</active>
        <description>Kickoff must be less or equal than the deadline</description>
        <errorConditionFormula>NOT(ISNULL(MPM4_BASE__Kickoff__c)) &amp;&amp; NOT(ISNULL(MPM4_BASE__Deadline__c)) &amp;&amp;  MPM4_BASE__Deadline__c &lt; MPM4_BASE__Kickoff__c</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Kickoff__c</errorDisplayField>
        <errorMessage>Kickoff must be less or equal than the deadline</errorMessage>
    </validationRules>
</CustomObject>